@@ -1066,7 +1066,7 @@ extern void  add_dest(job *);
 extern void  depend_clrrdy(job *);
 extern int   depend_on_que(pbs_attribute *, void *, int);
 extern int   depend_on_exec(job *);
-extern int   depend_on_term(job *);
+extern int   depend_on_term(char *);
 job         *find_job_regular_jobs(char *);
 job         *find_job_array_jobs(char *);
 extern char *get_egroup(job *);
